--- a/templates/experience.html
+++ b/templates/experience.html
@@ -47,7 +47,7 @@
 					</header>
 
 
-                    <div class="experience">
+                    <div class="experience1">
                         <header>
                             <h3>Software Engineering Intern (May 2016 - July 2016).</h3>
 
