--- a/templates/projects.html
+++ b/templates/projects.html
@@ -32,21 +32,28 @@
 				</ul>
 			</nav>
 
-        <section id="one" class="wrapper style1">
-            <div class="inner">
+        <section id="main" class="wrapper">
+            <div class="container">
+
+
                 <header class="major special">
                     <h2>Projects</h2>
                 </header>
-                <article class="feature left">
-                    <span class="image">
-                        <div class="diy-slideshow">
+
+            <div class="project1">
+                <header>
+                    <h3>Face Detection Bot</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project1.jpg' %}" height="350px" width="450px">
                             </figure>
                             <figure>
                                 <img src="{% static 'images/project1_2.png' %}" height="350px" width="450px">
                             </figure>
-							<figure>
+                            <figure>
                                 <img src="{% static 'images/project1_3.png' %}" height="350px" width="450px">
                             </figure>
                             <span class="prev">&laquo;</span>
@@ -54,20 +61,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Face Detection Bot</h3>
-                        <p> Built and Programmed a Raspberry pi 2 bot to follow human face using OpenCV2(Python) face detection algorithms. Bot successfully detected faces titled at different angles and motors were triggered depending on the movement of the face.</p>
+                        <p>A Raspberry Pi 2 bot which detects a face and follows it using Computer vision and Image processing Algorithms.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/FaceDetectionBot" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
+                <br>
+                <br>
 
-                <article class="feature right">
-                    <span class="image">
-                        <div class="diy-slideshow2">
+            <div class="project2">
+                <header>
+                    <h3>Ping Pong Game</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow2" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project2_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -82,20 +108,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Ping Pong Game</h3>
                         <p> Developed a 2 Player 2D PingPong game using OpenGL module in C++. Collisions with the walls and racquets at different angles implemented. Scores updated after a player wins a point.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/PingPongGame" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
+                <br>
+                <br>
 
-				<article class="feature left">
-                    <span class="image">
-                        <div class="diy-slideshow3">
+            <div class="project3">
+                <header>
+                    <h3>Movie Subtitles Downloader</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow3" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project3_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -113,20 +158,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Movie Subtitles Downloader</h3>
                         <p>Developed an Application using Python and subDB API to download the synchronised subtitles for a movie.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/Subtitle-downloader" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
+                <br>
+                <br>
 
-				<article class="feature right">
-                    <span class="image">
-                        <div class="diy-slideshow4">
+            <div class="project4">
+                <header>
+                    <h3>Quick Chat Application</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow4" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project4_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -141,20 +205,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Quick Chat Application</h3>
                         <p>Developed an Application where multiple users can enter a common room to chat. New Rooms can be created. And recent messages in a room can fetched. Application written in JAVA using a simple HTTP server.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
+                <br>
+                <br>
 
-                <article class="feature left">
-                    <span class="image">
-                        <div class="diy-slideshow5">
+            <div class="project5">
+                <header>
+                    <h3>Python GUI Application</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow5" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project5_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -169,19 +252,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Python GUI Application</h3>
                         <p>Developed an Application using Python and Tkinter module in python for GUI which calculates the bill for the selected items and quantity specified along with it.</p>
-                        <ul class="actions">
-                            <li>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
+                        <ul class="actions" >
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/QuickChat" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
-                <article class="feature right">
-                    <span class="image">
-                        <div class="diy-slideshow6">
+                <br>
+                <br>
+
+            <div class="project6">
+                <header>
+                    <h3>Just Park It</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow6" style="float:right; margin-left: 20px;">
                             <figure class="show" style="margin-left: 100px; ">
                                 <img src="{% static 'images/project7_1.png' %}" height="300px" width="250px">
                             </figure>
@@ -199,19 +302,39 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Just Park It.</h3>
                         <p>Android Application in Ionic framework which gives directions to a parking place selected by the user. Parking places are hardcoded.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/sudo-getAC/JustParkIt" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
+                </div>
+            </div>
 
-                <article class="feature left">
-                    <span class="image">
-                        <div class="diy-slideshow7">
+                <br>
+                <br>
+
+            <div class="project7">
+                <header>
+                    <h3>Library Management System</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+                    <span class="image" style="float: right; margin-left: 20px">
+                        <div class="diy-slideshow7" style="float:right; margin-left: 20px;">
                             <figure class="show">
                                 <img src="{% static 'images/project6_1.png' %}" height="350px" width="450px">
                             </figure>
@@ -232,16 +355,28 @@
                         </div>
                     </span>
                     <div class="content">
-                        <h3>Library Management System</h3>
                         <p>C program with basic menu for depositing/issuing books, fine calculations, books/user details etc to implement Library Management system.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li>Image Processing and computer vision algorithms written in Python.</li>
+                            <li>Raspberry Pi 2 and Camera module of RP2 used for capturing the faces.</li>
+                            <li>GPIO Module of Python for Raspberry Pi 2 used to control the motors.</li>
+                            <li>Simple Algorithm to detect the movement of the face and required motor to run.</li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+                            <li>Putty to connect to Raspberry Pi.</li>
+                            <li>VNC Server to use Laptop as the screen.</li>
+                            <li>Git for version control system.</li>
+                        </ul>
                         <ul class="actions">
-                            <li>
+                            <li style="margin-left: 40%;">
                                 <a href="https://github.com/mohitreddy1996/Library-Management-System" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
-                </article>
-
+                </div>
+            </div>
 
             </div>
         </section>
