--- a/templates/academics.html
+++ b/templates/academics.html
@@ -47,6 +47,7 @@
 						<h2>Academics</h2>
 					</header>
 
+                    <hr class="style-seven">
 
                     <div class="acad_area">
                         <header>
@@ -127,6 +128,7 @@
 
                     <!-- High School -->
                     <br>
+                    <hr class="style-eight">
                     <br>
                     <div class="acad_area">
                         <header>
@@ -179,8 +181,11 @@
                                         </ul>
                                     </div>
                                 </div>
+                            <br>
+
 
                         </div>
+                        <hr class="style-seven">
                     </div>
 				</div>
 			</section>
