--- a/templates/experience.html
+++ b/templates/experience.html
@@ -46,6 +46,8 @@
 						<h2>Professional Experience</h2>
 					</header>
 
+					<hr class="style-seven">
+
 
                     <div class="experience1">
                         <header>
@@ -81,6 +83,8 @@
                         </div>
 
                     </div>
+                    <br>
+                    <hr class="style-seven">
 				</div>
 			</section>
 		<!-- Footer -->
