--- a/templates/projects.html
+++ b/templates/projects.html
@@ -40,6 +40,7 @@
                     <h2>Projects</h2>
                 </header>
 
+                <hr class="style-seven">
             <div class="project1">
                 <header>
                     <h3>Face Detection Bot</h3>
@@ -85,6 +86,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project2">
@@ -132,6 +134,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project3">
@@ -182,6 +185,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project4">
@@ -229,6 +233,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project5">
@@ -276,6 +281,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project6">
@@ -326,6 +332,7 @@
             </div>
 
                 <br>
+                <hr class="style-eight">
                 <br>
 
             <div class="project7">
@@ -374,11 +381,14 @@
                                 <a href="https://github.com/mohitreddy1996/Library-Management-System" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
+                        <br>
+                        <hr class="style-seven">
                     </div>
                 </div>
             </div>
 
             </div>
+
         </section>
 
 		<!-- Footer -->
