--- a/templates/projects.html
+++ b/templates/projects.html
@@ -47,21 +47,6 @@
                     <h3>Bingo Web App.</h3>
                 </header>
                 <div class="inner" style="margin-left: 40px;">
-                    <span class="image" style="float: right; margin-left: 20px">
-                        <div class="diy-slideshow" style="float:right; margin-left: 20px;">
-                            <figure class="show">
-                                <img src="{% static 'images/project1.jpg' %}" height="350px" width="450px">
-                            </figure>
-                            <figure>
-                                <img src="{% static 'images/project1_2.png' %}" height="350px" width="450px">
-                            </figure>
-                            <figure>
-                                <img src="{% static 'images/project1_3.png' %}" height="350px" width="450px">
-                            </figure>
-                            <span class="prev">&laquo;</span>
-                            <span class="next">&raquo;</span>
-                        </div>
-                    </span>
                     <div class="content">
                         <p>Bingo Game implemented as a Web App using Node.js, ExpressJs, HTML and AJAX. Allows matches with Bot and users. Multiple users can login/Register and play at the same time.</p>
                         <p><b>Features:</b></p>
@@ -94,44 +79,51 @@
                 <hr class="style-eight">
                 <br>
 
+            <div class="project10">
+                <header>
+                    <h3>SimpleDB</h3>
+                </header>
+                <div class="inner" style="margin-left: 40px;">
+
+                    <div class="content">
+                        <p>Basic Database Management System.</p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li></li>
+                        </ul>
+                        <p><b>Tools Used:</b></p>
+                        <ul>
+
+                        </ul>
+                        <ul class="actions">
+                            <li style="margin-left: 40%;">
+                                <a href="https://github.com/mohitreddy1996/Bingo-Web-App" class="button alt" target="_blank">View source code</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+                <br>
+                <hr class="style-eight">
+                <br>
+
+
+
+
             <div class="project9">
                 <header>
                     <h3>Song Genre Classifier.</h3>
                 </header>
                 <div class="inner" style="margin-left: 40px;">
-                    <span class="image" style="float: right; margin-left: 20px">
-                        <div class="diy-slideshow" style="float:right; margin-left: 20px;">
-                            <figure class="show">
-                                <img src="{% static 'images/project1.jpg' %}" height="350px" width="450px">
-                            </figure>
-                            <figure>
-                                <img src="{% static 'images/project1_2.png' %}" height="350px" width="450px">
-                            </figure>
-                            <figure>
-                                <img src="{% static 'images/project1_3.png' %}" height="350px" width="450px">
-                            </figure>
-                            <span class="prev">&laquo;</span>
-                            <span class="next">&raquo;</span>
-                        </div>
-                    </span>
                     <div class="content">
                         <p></p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li>Allows User to play with the Bot. Bot implemented at the backend. Bot follows a greedy approach for selection of the next number.</li>
-                            <li>User Bingo matrix saved in the backend for computations and checking for BINGO.</li>
-                            <li>User Ids cached when user wants to battle with another user. When a match is found, user ids and removed from cache and one user is randomly assigned a chance to play.</li>
-                            <li>Client side scripts written to check for the user chance and last move made by the opponent. Loaded implemented till the opponent makes the move.</li>
-                            <li>User statistics saved when Game ends. User Data stored and modified in Mongo Database in the backend.</li>
-                        </ul>
+                            </ul>
                         <p><b>Tools Used:</b></p>
                         <ul>
-                            <li>ExpressJs used to server routes and server.</li>
-                            <li>Node.js used for backend scripting and Bot gameplay.</li>
-                            <li>Client side scripts written in JavaScript, AJAX and JQuery.</li>
-                            <li>Bootstrap used for basic UI.</li>
-                            <li>Webstorm used as text editor.</li>
-                            <li>Git as version control system.</li>
+
                         </ul>
                         <ul class="actions">
                             <li style="margin-left: 40%;">
