--- a/templates/projects.html
+++ b/templates/projects.html
@@ -44,7 +44,7 @@
 
                 <div class="project8">
                 <header>
-                    <h3>Bingo Web App.</h3>
+                    <h3>Bingo Web App</h3>
                 </header>
                 <div class="inner" style="margin-left: 40px;">
                     <div class="content">
@@ -86,18 +86,26 @@
                 <div class="inner" style="margin-left: 40px;">
 
                     <div class="content">
-                        <p>Basic Database Management System.</p>
+                        <p>Basic Database Management System coded in JAVA. Different APIs and Modules coded for the proper functionality
+                        of the DBMS given skeleton code.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            <li></li>
+                            <li>Data stored in the bufferpool in the form of Heap Files.</li>
+                            <li>Different Aggregate functions like Sum, Count, Max, Min etc implemented.</li>
+                            <li>Transactions handled accordingly. Page eviction implemented.</li>
+                            <li>DBMS implemented to handle basic SQL Queries.</li>
                         </ul>
                         <p><b>Tools Used:</b></p>
                         <ul>
-
+                            <li>Skeleton code from UC Berkeley Database Management Project. Project written completely in JAVA.</li>
+                            <li>JUnit used for testing purpose. Testcases provided along with the Skeleton code.</li>
+                            <li>IntelliJ IDEA used as IDE.</li>
+                            <li>Git as the version control system.</li>
+                            <li></li>
                         </ul>
                         <ul class="actions">
                             <li style="margin-left: 40%;">
-                                <a href="https://github.com/mohitreddy1996/Bingo-Web-App" class="button alt" target="_blank">View source code</a>
+                                <a href="https://github.com/mohitreddy1996/SimpleDB" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
@@ -113,21 +121,27 @@
 
             <div class="project9">
                 <header>
-                    <h3>Song Genre Classifier.</h3>
+                    <h3>Song Genre Classifier (On-Going)</h3>
                 </header>
                 <div class="inner" style="margin-left: 40px;">
                     <div class="content">
-                        <p></p>
+                        <p>A classifier which predicts the genre of the song depending on different rhythmic patterns, spectral patterns, timbral features of the song.</p>
                         <p><b>Features:</b></p>
                         <ul>
-                            </ul>
+                            <li>Classifier trained with a data set of X size.</li>
+                            <li>Classifier trained for classifying songs into 5 categories. Categories Being Rock, Pop, EDM .... (to be edited).</li>
+                            <li>Different forms of Fourier transformation used for audio processing. Different Machine learning algorithms used to train the train.</li>
+                            <li>Classifier trained using CART (Classification and Regression Trees), Neural Networks, K-nearest Classification algorithms.</li>
+                        </ul>
                         <p><b>Tools Used:</b></p>
                         <ul>
-
+                            <li>IPython as the IDE.</li>
+                            <li>Modules like Scipy, Numpy, Matplotlib, sklearn, scikits.talkbox etc modules in python.</li>
+                            <li>Git as version control system.</li>
                         </ul>
                         <ul class="actions">
                             <li style="margin-left: 40%;">
-                                <a href="https://github.com/mohitreddy1996/Bingo-Web-App" class="button alt" target="_blank">View source code</a>
+                                <a href="https://github.com/mohitreddy1996/Song-Genre-Classifier" class="button alt" target="_blank">View source code</a>
                             </li>
                         </ul>
                     </div>
