--- a/templates/index.html
+++ b/templates/index.html
@@ -419,22 +419,23 @@
 						<h2>Have a Message?</h2>
 						<p>Ping me at : </p>
 					</header>
-					<form action="#" method="POST">
+					<form action="/" method="POST">
+                        {% csrf_token %}
 						<div class="container 75%">
 							<div class="row uniform 50%">
 								<div class="6u 12u$(xsmall)">
-									<input name="name" placeholder="Name" type="text" />
+									<input name="name" placeholder="Name" type="text" required/>
 								</div>
 								<div class="6u$ 12u$(xsmall)">
-									<input name="email" placeholder="Email" type="email" />
+									<input name="email" placeholder="Email" type="email" required/>
 								</div>
 								<div class="12u$">
-									<textarea name="message" placeholder="Message" rows="4"></textarea>
+									<textarea name="message" placeholder="Message" rows="4" required></textarea>
 								</div>
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" class="special" value="Submit" /></li>
+							<li><input name="submit" type="submit" class="special" value="Submit" /></li>
 							<li><input type="reset" class="alt" value="Reset" /></li>
 						</ul>
 					</form>
