--- a/templates/academics.html
+++ b/templates/academics.html
@@ -117,7 +117,7 @@
                                    <button class="accordion" style="width: 75%; height: 40px;"><b>Achievements</b></button>
                                     <div class="panel">
                                         <ul>
-
+                                            <li>One among the winners of the intra-college programming contests.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -165,10 +165,9 @@
                                   <button class="accordion" style="width: 75%; height: 40px;"><b>Achievements</b></button>
                                     <div class="panel">
                                         <ul>
-                                            Edits required.
                                             <li>High school topper.</li>
-                                            <li>100/100 in Mathematics in grade 12.</li>
-                                            <li>Ranked 27(check) in India in RMO.</li>
+                                            <li>100/100 in Mathematics in CBSE class 12 examination.</li>
+                                            <li>Ranked 27 in India in RMO.</li>
                                             <li>Attended INMO coaching camp at IIT Madras.</li>
                                         </ul>
                                     </div>
@@ -176,8 +175,8 @@
                                    <button class="accordion" style="width: 75%; height: 40px;"><b>Extra Curricular Activities</b></button>
                                     <div class="panel">
                                         <ul>
-                                            Edits required.
                                             <li>Part of basketball and cricket teams.</li>
+                                            <li>Represented school in Science Quiz competitions.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -213,11 +212,6 @@
 						<li><a href="#" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
 					</ul>
 				</div>
 			</footer>
