--- a/templates/experience.html
+++ b/templates/experience.html
@@ -62,15 +62,15 @@
 
                             <div class="exp_heading"> <a href="https://www.bigclozet.com/">Bigclozet, Bangalore, India.</a></div>
                             <p><b>About the Organisation</b></p>
-                            <p>Bigclozet is a women fashion aggregator. Items from different E-Commerce websites are displayed at one single place. Addition to that many filters, other functionalities are available providing users more options to search.</p>
+                            <p>Bigclozet is a women fashion aggregator. Items from different E-Commerce websites are displayed on a single platform.</p>
                             <b>My work in 9 weeks.</b>
                             <ul>
-                                <li>Developed crawlers to fetch items from different E-Commerce Websites. The crawlers were written in Python. Crawlers were made multi-threaded to increase the throughput. Backed up with kafka framework to decrease the load on the database server(MongoDB) as many operations used to perform read/write operations on MongoDB. Integrated Grafana to get better statistics of how the crawlers are running(how many new items crawled, for how many prices decreased). Integrated slack with the crawlers so that notifications come up when crawlers failed. Testing of crawlers took a lot of time. Catalogue size almost doubled. Crawlers fetched around 1 Million new items.</li>
-                                <li>The second task was to write a web service which fetches the live price for an item being viewed by the user. Prices on big E-Commerce websites are changed frequently. Wrote the service using Node.js, Express and using a java server. Item URL and Seller name were passed to backend which used to crawl the item page and fetch the live price. </li>
-                                <li>The third task was to write RESTful APIs in Node.js and MongoDB to support new functionalities being added to the website and android application.</li>
+                                <li>Developed multi-threaded crawlers in Python to fetch items from different E-Commerce Websites. Crawlers integrated with kafka framework Producer-Consumer Clients. Integrated Grafana to get better metrics and statistics. Crawlers further improved to update the prices of the items already present in the database. Integrated slack with the crawlers to get notifications regarding crawlers. Testing of crawlers took a lot of time. Catalogue size almost doubled. Crawlers fetched around 1 Million new items.</li>
+                                <li>The second task was to write a web service which fetches the live price for an item being viewed by the user. Prices on big E-Commerce websites are changed frequently. Developed a webservice using Node.js, Express and using a java server. Item URL and Seller name were passed to backend which were used to crawl the item page and fetch the live price. </li>
+                                <li>The third task was to write RESTful APIs in Node.js and MongoDB to support various functionalities being added to the website and android application.</li>
                                 <li>Developed Webview in the android application when the user wants to buy a particular item. Added multiple functionalities in webview to make the user interaction better.</li>
-                                <li>Worked on the notification service of the android application.</li>
-                                <li>Major contribution in renovation of the whole android application of the organization. </li>
+                                <li>Worked on the notification service of the android application. Notifications sent to users notifying them regarding change of price or in-stock information.</li>
+                                <li>Major contribution in renovation of the android application for the organization. </li>
                             </ul>
                             <b>Technical Skills learnt/used: </b>
                             <br>
@@ -78,7 +78,7 @@
                             <br>
                             <b>Databases: </b>MongoDB
                             <br>
-                            <b>Frameworks/Tools: </b>Apache Kafka, Grafana, Android Studio, Webstorm, PyCharm, IntelliJ, MongoChef.
+                            <b>Frameworks/Tools: </b>Apache Kafka, Grafana, Android Studio, Webstorm, PyCharm, IntelliJ IDEA, MongoChef.
 
                         </div>
 
@@ -103,11 +103,6 @@
 						<li><a href="#" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
 					</ul>
 				</div>
 			</footer>
