--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 					<li><a href="/projects/">Projects</a></li>
 					<li><a href="/experience/">Experience</a></li>
 					<li><a href="/academics/">Academics</a></li>
-					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0RC1BQm5YTURBVTQ/view?usp=sharing" target="_blank">Resume</a></li>
+					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0Wk1fcXFkRVRDZkU/view?usp=sharing" target="_blank">Resume</a></li>
 					<li><a href="/#contact_me">Contact Me</a></li>
 				</ul>
 			</nav>
@@ -100,7 +100,6 @@
             <div class="inner">
                 <header class="major narrow">
 					<div class="heading_class">Profile</div>
-                    <!--<div class="customised_para">I am a Programmer.( Testing - Edit/Remove)</div>-->
                 </header>
 				<div class="customised_hr"></div>
                 <div class="row">
@@ -108,8 +107,8 @@
                         <header class="major narrow">
                             <div class="heading_class2"> About Me</div>
 							<div class="customised_hr"></div>
-                            <div class="customised_para">I am Sport programmer, developer, android developer, data engineer.
-                                &nbsp;( Testing - Edit/Remove)</div>
+                            <div class="customised_para">I am a junior year undergraduate student from India. I love to code. Also to learn
+                            and try new fields of computer science. I like working as a team. As the saying goes: 'two heads work better than one'. I love travelling and making new friends. </div>
                         </header>
                     </div>
                     <div class="col-2">
@@ -124,8 +123,16 @@
                             <h5><b>Age:</b></h5>
                             <p>19 Years.</p>
                             <h5><b>Place:</b></h5>
-                            <p>#D313, Mega Towers 2, National Institute of Technology, Karnataka, India. &nbsp;( Testing - Edit/Remove)</p>
+                            <p>#D313, Mega Towers 2, National Institute of Technology, Karnataka, India.</p>
                         </header>
+                    </div>
+                    <div>
+                        <p>I am 19 years old. I love spending time in-front of my laptop, mostly working on my projects. I love working late at nights. Mostly because of the silence around me and high internet speed. I speak three different languages fluently. English, Hindi and Telugu being those three.
+                            <br />
+                            I try to learn from my previous mistakes. I try to work hard. I set goals for a shorter period of time and try to achieve them. I like to learn things from different resources available on web. I don't like reading books other than Introduction to Algorithms by CLRS :P.
+                            <br />
+                            I also love watching TV shows in my free time. I am a huge fan of F.R.I.E.N.D.S, How I Met Your Mother, Game of Thrones and Sherlock and i have watched them more than once.
+                        </p>
                     </div>
                 </div>
 
@@ -133,69 +140,48 @@
                         At a glance
                     </div>
                 <div class="customised_hr2"></div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                Education
-                            </div>
-                            <div class="glanceContent">
-                                National Institue of Technology, Karnataka.
-                                bachelor of technology in Computer Science and Engineering.
-                                Junior Year.
-                                CGPA : 8.85/10
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
-                            <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="/academics/" class="button alt">More</a>
-                                </li>
-                            </ul>
+            <div class="row">
+                <div style="width:50%; float: left;">
+                    <div class="major narrow">
+                        <div class="heading_class2">
+                            Education
                         </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                Experience
-                            </div>
-                            <div class="glanceContent">
-                                1) Software Engineering Intern at Bigclozet.
-                                Worked as a Data Engineering and Backend developer. Worked on Android application of the
-                                startup (Mention details).
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
+                        <div class="glanceContent">
+                            National Institue of Technology, Karnataka.<br>
+                            Junior Year, Bachelor of Technology in Computer Science and Engineering.<br>
+                            CGPA : 8.85/10
                             <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="#" class="button alt">More</a>
-                                </li>
-                            </ul>
                         </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                From
-                            </div>
-                            <div class="glanceContent">
-                                I have stayed in many places.
-                                Currently i live in Air Force Station, Gwalior maharajapura, Madhya Pradesh, India.
-                                474025.
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
-                            <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="#" class="button alt">More</a>
-                                </li>
-                            </ul>
-                        </div>
+                        <br>
+                        <ul class="actions">
+                            <li>
+                                <a href="/academics/" class="button alt">More</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+
+                <div style="width : 50%; float:right;">
+                    <div class="major narrow">
+                        <div class="heading_class2">
+                            Experience
+                        </div>
+                        <div class="glanceContent">
+                            Software Engineering Intern at Bigclozet.
+                            <br \>
+                            Bigclozet is an E-commerce website which acts as an aggregator for other E-commerce website for Women Fashion.
+                            <br>
+                        </div>
+                        <br>
+                        <ul class="actions">
+                            <li>
+                                <a href="#" class="button alt">Know More</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
 
             </div>
         </section>
