--- a/templates/projects.html
+++ b/templates/projects.html
@@ -505,24 +505,24 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
-						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
-							<span class="label">LinkedIn</span>
-						</a></li>
+                        <li><a href="https://www.facebook.com/mohit.reddy.5" class="icon fa-facebook" target="_blank">
+                            <span class="label">Facebook</span>
+                        </a></li>
+                        <li><a href='mailto:mohitreddy1996@gmail.com' class="icon fa-google" target="_blank">
+                            <span class="label">Gmail</span>
+                        </a></li>
+                        <li><a href="https://github.com/mohitreddy1996" class="icon fa-github" target="_blank">
+                            <span class="label">Github</span>
+                        </a></li>
+                        <li><a href="https://linkedin.com/in/mohitreddy1996" class="icon fa-linkedin" target="_blank">
+                            <span class="label">LinkedIn</span>
+                        </a></li>
 					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
-					</ul>
+                    <ul class="copyright">
+    					<li>&copy; 2016, Mohit Reddy</li>
+ 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
+ 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+ 					</ul>
 				</div>
 			</footer>
 
