--- a/templates/index.html
+++ b/templates/index.html
@@ -60,42 +60,6 @@
                 </div>
 			</section>
 
-        <!-- Image slideshow
-        <section id="five">
-            <div class="diy-slideshow">
-
-                <figure class="show">
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/snowying.jpg" width="100%" /><figcaption>"Snowying" by <a href="http://www.flickr.com/photos/fiddleoak/8511209344/">fiddleoak</a>.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/starlight.jpg" width="100%" /><figcaption>"Starlight" by <a href="http://www.flickr.com/photos/chaoticmind75/10738494123/in/set-72157626146319517">ChaoticMind75</a>.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/snowstorm.jpg" width="100%" /><figcaption>"Snowstorm" by <a href="http://www.flickr.com/photos/tylerbeaulawrence/8539457508/">Beaulawrence</a>.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/misty-winter-afternoon.jpg" width="100%" /><figcaption>"Misty winter afternoon" by <a href="http://www.flickr.com/photos/22746515@N02/5277611659/">Bert Kaufmann</a>.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/good-morning.jpg" width="100%" /><figcaption>"Good Morning!" by <a href="http://www.flickr.com/photos/frank_wuestefeld/4306107546/">Frank Wuestefeld</a>.</figcaption>
-                </figure>
-
-                <figure>
-                    <img src="http://themarklee.com/wp-content/uploads/2013/12/driving-home-for-christmas.jpg" width="100%" /><figcaption>"Driving home for Christmas" by <a href="http://www.flickr.com/photos/22746515@N02/5292186041/">Bert Kaufmann</a>.</figcaption>
-                </figure>
-
-                <span class="prev">&laquo;</span>
-                <span class="next">&raquo;</span>
-            </div>
-        </section>
-
-        -->
-        <!-- Profile Section -->
-
         <section id="one" class="wrapper special">
             <div class="inner">
                 <header class="major narrow">
@@ -186,208 +150,6 @@
             </div>
         </section>
 
-        <!--At a Glance section -->
-        <!--
-        <section id="eight" class="wrapper special">
-            <div class="inner">
-                <header class="major narrow">
-                    <div class="heading_class">
-                        At A Glance
-                    </div>
-                </header>
-                <div class="customised_hr"></div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                Education
-                            </div>
-                            <div class="glanceContent">
-                                National Institue of Technology, Karnataka.
-                                bachelor of technology in Computer Science and Engineering.
-                                Junior Year.
-                                CGPA : 8.85/10
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
-                            <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="#" class="button alt">More</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                Experience
-                            </div>
-                            <div class="glanceContent">
-                                1) Software Engineering Intern at Bigclozet.
-                                Worked as a Data Engineering and Backend developer. Worked on Android application of the
-                                startup (Mention details).
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
-                            <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="#" class="button alt">More</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="major narrow">
-                            <div class="heading_class2">
-                                From
-                            </div>
-                            <div class="glanceContent">
-                                I have stayed in many places.
-                                Currently i live in Air Force Station, Gwalior maharajapura, Madhya Pradesh, India.
-                                474025.
-                                <br>
-                            <b>to be edited.</b>
-                            </div>
-                            <br>
-                            <ul class="actions">
-                                <li>
-                                    <a href="#" class="button alt">More</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        -->
-        <!-- Projects Section -->
-        <!--
-        <section id="two" class="wrapper special">
-            <div class="inner">
-                <header class="major narrow">
-                    <div class="heading_class">Projects</div>
-                </header>
-                <div class="customised_hr"></div>
-                <ul class="photo-grid">
-                    <li>
-                            <figure class="show">
-                                <img src="{% static 'images/project1.jpg' %}" alt="Face Detection Bot">
-                                <figcaption>
-                                    <h4>Face Detection Bot</h4>
-                                    <p>OpenCV2, Raspberry PI 2, motors.
-                                    Face Detection Algorithms.
-                                    Python Coding.
-                                    Raspberry Pi 2 integration.</p>
-                                    <a href="/projects/">
-                                        <div class="project-box">
-                                            Learn More.
-                                        </div>
-                                    </a>
-                                </figcaption>
-                            </figure>
-                    </li>
-
-                    <li>
-                            <figure class="show">
-                                <img src="{% static 'images/project2.png' %}" alt="Chat Box">
-                                <figcaption>
-                                    <h4>Chat Box</h4>
-                                    <p>Java HTTP Server.
-                                    Basic HTML UI.
-                                    GET/POST Calls.</p>
-                                    <a href="/projects/">
-                                        <div class="project-box">
-                                            Learn More.
-                                        </div>
-                                    </a>
-                                </figcaption>
-                            </figure>
-                    </li>
-
-                    <li>
-                            <figure class="show">
-                                <img src="{% static 'images/project3.png' %}" alt="Subtitle Downloader">
-                                <figcaption>
-                                    <h4>Subtitle Downloader</h4>
-                                    <p>Python Scripts.
-                                    Command Line arguments.
-                                    subDB API.</p>
-                                    <a href="/projects/">
-                                        <div class="project-box">
-                                            Learn More.
-                                        </div>
-                                    </a>
-                                </figcaption>
-                            </figure>
-                    </li>
-                </ul>
-                <ul class="actions">
-                    <li>
-                        <a href="#" class="button alt">More</a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        -->
-
-		<!-- One -->
-        <!--
-			<section id="one" class="wrapper style1">
-				<div class="inner">
-					<article class="feature left">
-						<span class="image"><img src="{% static 'images/pic01.jpg' %}" alt="" /></span>
-						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
-							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-					<article class="feature right">
-						<span class="image"><img src="{% static 'images/pic02.jpg' %}" alt="" /></span>
-						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
-							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-				</div>
-			</section>
-           -->
-		<!-- Two -->
-        <!--
-			<section id="two" class="wrapper special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Aliquam Blandit Mauris</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<div class="image-grid">
-						<a href="#" class="image"><img src="{% static 'images/pic03.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic04.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic05.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic06.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic07.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic08.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic09.jpg' %}" alt="" /></a>
-						<a href="#" class="image"><img src="{% static 'images/pic10.jpg' %}" alt="" /></a>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
-					</ul>
-				</div>
-			</section>
-        -->
-		<!-- Three -->
 
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
@@ -433,20 +195,26 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
-						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
-							<span class="label">LinkedIn</span>
-						</a></li>
+                        <li><a href="https://www.facebook.com/mohit.reddy.5" class="icon fa-facebook" target="_blank">
+                            <span class="label">Facebook</span>
+                        </a></li>
+                        <li><a href='mailto:mohitreddy1996@gmail.com' class="icon fa-google" target="_blank">
+                            <span class="label">Gmail</span>
+                        </a></li>
+                        <li><a href="https://github.com/mohitreddy1996" class="icon fa-github" target="_blank">
+                            <span class="label">Github</span>
+                        </a></li>
+                        <li><a href="https://linkedin.com/in/mohitreddy1996" class="icon fa-linkedin" target="_blank">
+                            <span class="label">LinkedIn</span>
+                        </a></li>
 					</ul>
+                    <ul class="copyright">
+ 						<li>&copy; 2016, Mohit Reddy</li>
+ 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
+ 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+ 					</ul>
 				</div>
+
 			</footer>
 
 		<!-- Scripts -->
